--- a/src/main/main-app/app-libraries/app-libraries.css
+++ b/src/main/main-app/app-libraries/app-libraries.css
@@ -18,12 +18,12 @@
 }
 
 .library-card h4 {
-  margin-left: auto;
-  margin-right: auto;
   font-weight: 700;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 0;
   font-size: 20px;
+}
+.library-card p {
+  margin: 0;
 }
 .library-card .git-icon {
   margin: 0;
