--- a/src/main/main-app/app-frameworks/app-frameworks.css
+++ b/src/main/main-app/app-frameworks/app-frameworks.css
@@ -34,7 +34,9 @@
 }
 @media only screen and (max-width: 600px) {
   .framework-card {
-    min-width: 175px;
-    width: 40%;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 250px;
   }
 }
