--- a/src/main/main-app/app-libraries/app-libraries.css
+++ b/src/main/main-app/app-libraries/app-libraries.css
@@ -53,7 +53,9 @@
 }
 @media only screen and (max-width: 600px) {
   .library-card {
-    min-width: 175px;
-    width: 40%;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 250px;
   }
 }
