--- a/src/main/main-app/app-projects/app-projects.css
+++ b/src/main/main-app/app-projects/app-projects.css
@@ -57,7 +57,9 @@
 }
 @media only screen and (max-width: 600px) {
   .project-card {
-    min-width: 175px;
-    width: 40%;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 250px;
   }
 }
