--- a/src/main/main-app/app-socials/app-socials.css
+++ b/src/main/main-app/app-socials/app-socials.css
@@ -48,7 +48,9 @@
 
 @media only screen and (max-width: 600px) {
   .social-card {
-    min-width: 175px;
-    width: 40%;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 250px;
   }
 }
