--- a/src/main/main-app/app-frameworks/app-frameworks.css
+++ b/src/main/main-app/app-frameworks/app-frameworks.css
@@ -27,8 +27,11 @@
 }
 
 .framework-card img {
-  width: 150px;
-  height: 150px;
+  width: 85%;
+  max-width: 200px;
+  max-height: 200px;
+  min-height: 200px;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -37,6 +40,6 @@
     width: 95%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 250px;
+    max-width: 350px;
   }
 }
