--- a/src/main/main-app/app-libraries/app-libraries.css
+++ b/src/main/main-app/app-libraries/app-libraries.css
@@ -34,8 +34,11 @@
   align-self: flex-end;
 }
 .library-card img {
-  width: 150px;
-  height: 150px;
+  width: 85%;
+  max-width: 200px;
+  max-height: 200px;
+  min-height: 200px;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -56,6 +59,6 @@
     width: 95%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 250px;
+    max-width: 350px;
   }
 }
