--- a/src/main/main-app/app-projects/app-projects.css
+++ b/src/main/main-app/app-projects/app-projects.css
@@ -29,6 +29,8 @@
 
 .project-card img {
   width: 85%;
+  max-width: 200px;
+  max-height: 200px;
   min-height: 200px;
   margin-bottom: 10px;
   
@@ -60,6 +62,6 @@
     width: 95%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 250px;
+    max-width: 350px;
   }
 }
