--- a/src/main/main-app/app-socials/app-socials.css
+++ b/src/main/main-app/app-socials/app-socials.css
@@ -19,8 +19,11 @@
 }
 
 .social-card img {
-  width: 150px;
-  height: 150px;
+  width: 85%;
+  max-width: 200px;
+  max-height: 200px;
+  min-height: 200px;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -51,6 +54,6 @@
     width: 95%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 250px;
+    max-width: 350px;
   }
 }
